--- a/photography.html
+++ b/photography.html
@@ -73,41 +73,41 @@
 					<!-- Photo Grid -->
 					<div class="row"> 
 						<div class="column">
-							<img src="IMG/Photos/_DSC0109.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC0114.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC0158.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC4224-2.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC4239-3.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC4301-4.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC8909.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC0109.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC0114.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC0158.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC4224-2.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC4239-3.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC4301-4.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC8909.jpg" style="width:100%" alt="photo">
 
 						</div>
 						<div class="column">
-							<img src="IMG/Photos/_DSC4475-6.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC4492-7.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC6535.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC6536.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC6553-2.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC6553.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC6559.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC4475-6.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC4492-7.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC6535.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC6536.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC6553-2.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC6553.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC6559.jpg" style="width:100%" alt="photo">
 						</div>  
 						<div class="column">
-							<img src="IMG/Photos/_DSC9049.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC9061.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC6665.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC6971.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC7079.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC7154.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC9254.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC9049.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC9061.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC6665.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC6971.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC7079.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC7154.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC9254.jpg" style="width:100%" alt="photo">
 						</div>
 						<div class="column">
-							<img src="IMG/Photos/_DSC7952.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC9621.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC8375.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC9682.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC8856.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC8909.jpg" style="width:100%" alt="photo">
-							<img src="IMG/Photos/_DSC1444.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC7952.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC9621.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC8375.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC9682.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC8856.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC8909.jpg" style="width:100%" alt="photo">
+							<img src="IMG/Photos/DSC1444.jpg" style="width:100%" alt="photo">
 					  </div>
 					</div>
 				</div>
